# DoctorX

./: .gitignore  ADMIN_WORKFLOW.md  DEPLOYMENT_GUIDE.md  DUAL_DATABASE_SETUP.md  Procfile  README.md  VERCEL_DEPLOYMENT.md  VERCEL_DEPLOYMENT_GUIDE.md  generate_secret_key.py  manage.py  pyproject.toml  requirements.txt  vercel.json  wsgi.py
DoctorX/: asgi.py  settings.py  urls.py  views.py  wsgi.py
accounts/: admin.py  forms.py  models.py  urls.py  utils.py  views.py
accounts/migrations/: 0001_initial.py
accounts/templates/: login.html  patient_dashboard.html  register.html
api/: index.py
appointments/: admin.py  forms.py  models.py  urls.py  views.py
appointments/migrations/: 0001_initial.py  0002_alter_appointment_options_and_more.py  0003_remove_payment_fields.py  0004_alter_appointment_date.py
doctors/: admin.py  forms.py  models.py  services.py  urls.py  utils.py  views.py
doctors/migrations/: 0001_initial.py  0002_doctorschedule.py  0003_alter_doctorschedule_unique_together_and_more.py  0004_alter_doctorschedule_unique_together.py  0005_patient_appointment.py
static/css/: styles.css
staticfiles/css/: admin.css  admin_style.css
staticfiles/styles/: main.css
templates/: base.html  index.html  login.html  register.html
templates/admin/: admin_create.html  admin_delete.html  admin_edit.html  admin_list.html  doctor_create.html  doctor_delete.html  doctor_edit.html  doctor_list.html  doctor_schedule_delete.html  doctor_schedule_form.html  doctor_schedule_list.html
templates/patient/: base.html  change_password.html  dashboard.html  (+2 more)
(+26 files in other folders)
