[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "DoctorX"
version = "1.0.0"
description = "Doctor appointment management system"
authors = [
    {name = "DoctorX Team", email = "info@doctorx.com"}
]
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
]
dependencies = [
    "Django>=4.2.0,<7.0",
    "Pillow>=10.0.0",
    "python-decouple>=3.8",
    "django-crispy-forms>=2.0",
    "crispy-bootstrap5>=0.7",
    "gunicorn>=20.1.0",
    "whitenoise>=6.0.0",
    "psycopg2-binary>=2.9.0",
    "dj-database-url>=3.1.0",
]

[project.urls]
Homepage = "https://github.com/Aaks1/pakkiora"
Repository = "https://github.com/Aaks1/pakkiora.git"
Issues = "https://github.com/Aaks1/pakkiora/issues"

[tool.setuptools.packages.find]
where = ["."]
include = ["DoctorX*", "accounts*", "doctors*", "appointments*"]

[tool.setuptools.dynamic]
dependencies = {file = ["requirements.txt"]}
